--- a/src/style/Navbar.scss
+++ b/src/style/Navbar.scss
@@ -1,6 +1,6 @@
 nav {
     height: 150px;
-    background-color: red;
+    background-color: rgba(237, 12, 12, 0.87);
     display: flex;
     justify-content: space-between;
     align-items: center;
