--- a/src/style/Form.scss
+++ b/src/style/Form.scss
@@ -25,22 +25,23 @@
             font-weight: 700;
             transition: transform 0.2s;
         }
-    }
 
-    input[type=submit] {
-        padding: 10px;
-        border-radius: 10px;
-        background-color: #ffffff;
-        font-weight: 700;
+        input[type=submit] {
+            margin: 0 auto;
+            padding: 10px;
+            width: fit-content;
+            border-radius: 10px;
+            background-color: #ffffff;
+            font-weight: 700;
 
-        cursor: pointer;
-        &:hover{
-            transform: scale(1.1);
-            box-shadow: 11px 11px 9px -5px rgba(250, 0, 0, 0.74);
-            -webkit-box-shadow: 11px 11px 9px -5px rgba(250, 0, 0, 0.74);
-            -moz-box-shadow: 11px 11px 9px -5px rgba(250, 0, 0, 0.74);
-            color: red;
-            font-weight: 800;
+            cursor: pointer;
+
+            &:hover {
+                transform: scale(1.1);
+                color: red;
+                font-weight: 800;
+            }
         }
     }
+
 }
